// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createBackendBucketEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/backendBuckets/example-backend-bucket",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "bucketName": "log-example-bucket",
        "creationTimestamp": "2021-01-29T08:55:45.400-08:00",
        "description": "",
        "enableCdn": false,
        "id": "6230681112154833150",
        "kind": "compute#backendBucket",
        "name": "example-backend-bucket",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/backendBuckets/example-backend-bucket",
      },
    },
  ],
  "_type": "google_compute_backend_bucket",
  "bucketName": "log-example-bucket",
  "category": Array [
    "network",
  ],
  "createdOn": 1611939345400,
  "description": "",
  "displayName": "example-backend-bucket",
  "enableCdn": false,
  "encrypted": true,
  "function": Array [
    "load-balancing",
  ],
  "id": "6230681112154833150",
  "name": "example-backend-bucket",
  "public": true,
}
`;

exports[`#createBackendServiceEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Service",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/backendServices/example-backend-service",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "affinityCookieTtlSec": 0,
        "backends": Array [
          Object {
            "balancingMode": "UTILIZATION",
            "capacityScaler": 1,
            "group": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/zones/us-central1-a/instanceGroups/instance-group-1",
            "maxUtilization": 0.8,
          },
        ],
        "connectionDraining": Object {
          "drainingTimeoutSec": 300,
        },
        "creationTimestamp": "2021-01-25T13:09:28.422-08:00",
        "description": "",
        "enableCDN": false,
        "fingerprint": "OnffiLYpLO4=",
        "healthChecks": Array [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/healthChecks/health-check",
        ],
        "id": "3052966098403233127",
        "kind": "compute#backendService",
        "loadBalancingScheme": "EXTERNAL",
        "logConfig": Object {
          "enable": true,
          "sampleRate": 1,
        },
        "name": "example-backend-service",
        "port": 80,
        "portName": "https",
        "protocol": "HTTPS",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/backendServices/example-backend-service",
        "sessionAffinity": "NONE",
        "timeoutSec": 30,
      },
    },
  ],
  "_type": "google_compute_backend_service",
  "category": Array [
    "network",
  ],
  "createdOn": 1611608968422,
  "description": "",
  "displayName": "example-backend-service",
  "enableCDN": false,
  "id": "3052966098403233127",
  "name": "example-backend-service",
  "port": 80,
  "protocol": "HTTPS",
  "timeoutSec": 30,
}
`;

exports[`#createComputeDiskEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "DataStore",
    "Disk",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2020-08-12T08:20:05.930-07:00",
        "guestOsFeatures": Array [
          Object {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
        ],
        "id": "123456789",
        "kind": "compute#disk",
        "labelFingerprint": "42WmSpB8rSM=",
        "lastAttachTimestamp": "2020-08-12T08:20:05.930-07:00",
        "licenseCodes": Array [
          "1000205",
        ],
        "licenses": Array [
          "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
        ],
        "name": "testvm",
        "physicalBlockSizeBytes": "4096",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
        "sizeGb": "10",
        "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
        "sourceImageId": "6709658075886210235",
        "status": "READY",
        "tags": undefined,
        "type": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/diskTypes/pd-standard",
        "users": Array [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_disk",
  "active": true,
  "classification": null,
  "createdOn": 1597245605930,
  "description": undefined,
  "displayName": "testvm",
  "encrypted": true,
  "guestOsFeatures": Array [
    "VIRTIO_SCSI_MULTIQUEUE",
  ],
  "id": "123456789",
  "isCustomerSuppliedKeysEncrypted": false,
  "kind": "compute#disk",
  "labelFingerprint": "42WmSpB8rSM=",
  "lastAttachTimestamp": 1597245605930,
  "licenseCodes": Array [
    "1000205",
  ],
  "licenses": Array [
    "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
  ],
  "name": "testvm",
  "physicalBlockSizeBytes": "4096",
  "sizeGB": "10",
  "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
  "sourceImageId": "6709658075886210235",
  "status": "READY",
  "type": "pd-standard",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeDiskEntity should set active to false when status is not READY 1`] = `
Object {
  "_class": Array [
    "DataStore",
    "Disk",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2020-08-12T08:20:05.930-07:00",
        "guestOsFeatures": Array [
          Object {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
        ],
        "id": "123456789",
        "kind": "compute#disk",
        "labelFingerprint": "42WmSpB8rSM=",
        "lastAttachTimestamp": "2020-08-12T08:20:05.930-07:00",
        "licenseCodes": Array [
          "1000205",
        ],
        "licenses": Array [
          "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
        ],
        "name": "testvm",
        "physicalBlockSizeBytes": "4096",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
        "sizeGb": "10",
        "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
        "sourceImageId": "6709658075886210235",
        "status": "FAILED",
        "tags": undefined,
        "type": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/diskTypes/pd-standard",
        "users": Array [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_disk",
  "active": false,
  "classification": null,
  "createdOn": 1597245605930,
  "description": undefined,
  "displayName": "testvm",
  "encrypted": true,
  "guestOsFeatures": Array [
    "VIRTIO_SCSI_MULTIQUEUE",
  ],
  "id": "123456789",
  "isCustomerSuppliedKeysEncrypted": false,
  "kind": "compute#disk",
  "labelFingerprint": "42WmSpB8rSM=",
  "lastAttachTimestamp": 1597245605930,
  "licenseCodes": Array [
    "1000205",
  ],
  "licenses": Array [
    "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
  ],
  "name": "testvm",
  "physicalBlockSizeBytes": "4096",
  "sizeGB": "10",
  "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
  "sourceImageId": "6709658075886210235",
  "status": "FAILED",
  "type": "pd-standard",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeFirewallEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Firewall",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/firewalls/public-compute-app-fw-allow-https",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "allowed": Array [
          Object {
            "IPProtocol": "tcp",
            "ports": Array [
              "443",
            ],
          },
        ],
        "creationTimestamp": "2020-09-23T07:47:24.809-07:00",
        "description": "",
        "direction": "INGRESS",
        "disabled": false,
        "id": "1234567890",
        "kind": "compute#firewall",
        "logConfig": Object {
          "enable": false,
        },
        "name": "public-compute-app-fw-allow-https",
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/public-compute-app-vpc",
        "priority": 1000,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/firewalls/public-compute-app-fw-allow-https",
        "sourceRanges": Array [
          "0.0.0.0/0",
        ],
        "targetTags": Array [
          "https",
        ],
      },
    },
  ],
  "_type": "google_compute_firewall",
  "allowed": "[{\\"IPProtocol\\":\\"tcp\\",\\"ports\\":[\\"443\\"]}]",
  "category": Array [
    "network",
  ],
  "createdOn": 1600872444809,
  "denied": undefined,
  "description": "",
  "destinationRanges": undefined,
  "disabled": false,
  "displayName": "public-compute-app-fw-allow-https",
  "egress": false,
  "id": "1234567890",
  "ingress": true,
  "internal": true,
  "logConfigEnabled": false,
  "logConfigMetadata": undefined,
  "name": "public-compute-app-fw-allow-https",
  "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/public-compute-app-vpc",
  "priority": 1000,
  "public": false,
  "sourceRanges": Array [
    "0.0.0.0/0",
  ],
  "sourceServiceAccounts": undefined,
  "sourceTags": undefined,
  "targetServiceAccounts": undefined,
  "targetTags": Array [
    "https",
  ],
}
`;

exports[`#createComputeInstanceEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Host",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "canIpForward": false,
        "cpuPlatform": "Intel Haswell",
        "creationTimestamp": "2020-08-12T08:20:05.921-07:00",
        "deletionProtection": false,
        "disks": Array [
          Object {
            "autoDelete": true,
            "boot": true,
            "deviceName": "persistent-disk-0",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "index": 0,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
            ],
            "mode": "READ_WRITE",
            "source": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
            "type": "PERSISTENT",
          },
          Object {
            "autoDelete": true,
            "boot": false,
            "deviceName": "local-ssd-0",
            "diskSizeGb": "375",
            "index": 1,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "mode": "READ_WRITE",
            "type": "SCRATCH",
          },
        ],
        "fingerprint": "4gmEF7tlfn8=",
        "id": "2248191918776890954",
        "kind": "compute#instance",
        "labelFingerprint": "42WmSpB8rSM=",
        "machineType": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/machineTypes/n1-standard-1",
        "metadata": Object {
          "fingerprint": "9yLGkjCLBTs=",
          "items": Array [
            Object {
              "key": "foo",
              "value": "bar",
            },
            Object {
              "key": "startup-script",
              "value": "echo Hello",
            },
          ],
          "kind": "compute#metadata",
        },
        "name": "testvm",
        "networkInterfaces": Array [
          Object {
            "fingerprint": "RpvQNHzHRp8=",
            "kind": "compute#networkInterface",
            "name": "nic0",
            "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/default",
            "networkIP": "10.128.0.2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/us-central1/subnetworks/default",
          },
        ],
        "scheduling": Object {
          "automaticRestart": true,
          "onHostMaintenance": "MIGRATE",
          "preemptible": false,
        },
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
        "serviceAccounts": Array [
          Object {
            "email": "j1-gc-integration-dev-sa-tf@j1-gc-integration-dev.iam.gserviceaccount.com",
            "scopes": Array [
              "https://www.googleapis.com/auth/compute.readonly",
              "https://www.googleapis.com/auth/devstorage.read_only",
              "https://www.googleapis.com/auth/userinfo.email",
            ],
          },
        ],
        "startRestricted": false,
        "status": "RUNNING",
        "tags": Array [
          Object {
            "testvmtag1": true,
          },
          Object {
            "testvmtag2": true,
          },
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_instance",
  "active": true,
  "blockProjectSSHKeys": undefined,
  "canIpForward": false,
  "cpuPlatform": "Intel Haswell",
  "createdOn": 1597245605921,
  "deletionProtection": false,
  "displayName": "testvm",
  "fingerprint": "4gmEF7tlfn8=",
  "id": "2248191918776890954",
  "isOSLoginEnabled": false,
  "isSerialPortEnabled": undefined,
  "isShieldedVM": undefined,
  "kind": "compute#instance",
  "labelFingerprint": "42WmSpB8rSM=",
  "machineType": "n1-standard-1",
  "name": "testvm",
  "privateIpAddress": Array [
    "10.128.0.2",
  ],
  "publicIpAddress": Array [],
  "startRestricted": false,
  "status": "RUNNING",
  "usesDefaultServiceAccount": false,
  "usesFullAccessDefaultServiceAccount": false,
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceEntity should set active to false when status is not RUNNING 1`] = `
Object {
  "_class": Array [
    "Host",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "canIpForward": false,
        "cpuPlatform": "Intel Haswell",
        "creationTimestamp": "2020-08-12T08:20:05.921-07:00",
        "deletionProtection": false,
        "disks": Array [
          Object {
            "autoDelete": true,
            "boot": true,
            "deviceName": "persistent-disk-0",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "index": 0,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
            ],
            "mode": "READ_WRITE",
            "source": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
            "type": "PERSISTENT",
          },
          Object {
            "autoDelete": true,
            "boot": false,
            "deviceName": "local-ssd-0",
            "diskSizeGb": "375",
            "index": 1,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "mode": "READ_WRITE",
            "type": "SCRATCH",
          },
        ],
        "fingerprint": "4gmEF7tlfn8=",
        "id": "2248191918776890954",
        "kind": "compute#instance",
        "labelFingerprint": "42WmSpB8rSM=",
        "machineType": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/machineTypes/n1-standard-1",
        "metadata": Object {
          "fingerprint": "9yLGkjCLBTs=",
          "items": Array [
            Object {
              "key": "foo",
              "value": "bar",
            },
            Object {
              "key": "startup-script",
              "value": "echo Hello",
            },
          ],
          "kind": "compute#metadata",
        },
        "name": "testvm",
        "networkInterfaces": Array [
          Object {
            "fingerprint": "RpvQNHzHRp8=",
            "kind": "compute#networkInterface",
            "name": "nic0",
            "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/default",
            "networkIP": "10.128.0.2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/us-central1/subnetworks/default",
          },
        ],
        "scheduling": Object {
          "automaticRestart": true,
          "onHostMaintenance": "MIGRATE",
          "preemptible": false,
        },
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
        "serviceAccounts": Array [
          Object {
            "email": "j1-gc-integration-dev-sa-tf@j1-gc-integration-dev.iam.gserviceaccount.com",
            "scopes": Array [
              "https://www.googleapis.com/auth/compute.readonly",
              "https://www.googleapis.com/auth/devstorage.read_only",
              "https://www.googleapis.com/auth/userinfo.email",
            ],
          },
        ],
        "startRestricted": false,
        "status": "SUSPENDED",
        "tags": Array [
          Object {
            "testvmtag1": true,
          },
          Object {
            "testvmtag2": true,
          },
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_instance",
  "active": false,
  "blockProjectSSHKeys": undefined,
  "canIpForward": false,
  "cpuPlatform": "Intel Haswell",
  "createdOn": 1597245605921,
  "deletionProtection": false,
  "displayName": "testvm",
  "fingerprint": "4gmEF7tlfn8=",
  "id": "2248191918776890954",
  "isOSLoginEnabled": false,
  "isSerialPortEnabled": undefined,
  "isShieldedVM": undefined,
  "kind": "compute#instance",
  "labelFingerprint": "42WmSpB8rSM=",
  "machineType": "n1-standard-1",
  "name": "testvm",
  "privateIpAddress": Array [
    "10.128.0.2",
  ],
  "publicIpAddress": Array [],
  "startRestricted": false,
  "status": "SUSPENDED",
  "usesDefaultServiceAccount": false,
  "usesFullAccessDefaultServiceAccount": false,
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceEntity should set isOSLoginEnabled to true when enabled-oslogin metadata value is "TRUE" 1`] = `
Object {
  "_class": Array [
    "Host",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "canIpForward": false,
        "cpuPlatform": "Intel Haswell",
        "creationTimestamp": "2020-08-12T08:20:05.921-07:00",
        "deletionProtection": false,
        "disks": Array [
          Object {
            "autoDelete": true,
            "boot": true,
            "deviceName": "persistent-disk-0",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "index": 0,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
            ],
            "mode": "READ_WRITE",
            "source": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
            "type": "PERSISTENT",
          },
          Object {
            "autoDelete": true,
            "boot": false,
            "deviceName": "local-ssd-0",
            "diskSizeGb": "375",
            "index": 1,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "mode": "READ_WRITE",
            "type": "SCRATCH",
          },
        ],
        "fingerprint": "4gmEF7tlfn8=",
        "id": "2248191918776890954",
        "kind": "compute#instance",
        "labelFingerprint": "42WmSpB8rSM=",
        "machineType": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/machineTypes/n1-standard-1",
        "metadata": Object {
          "items": Array [
            Object {
              "key": "enable-oslogin",
              "value": "TRUE",
            },
          ],
          "kind": "compute#metadata",
        },
        "name": "testvm",
        "networkInterfaces": Array [
          Object {
            "fingerprint": "RpvQNHzHRp8=",
            "kind": "compute#networkInterface",
            "name": "nic0",
            "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/default",
            "networkIP": "10.128.0.2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/us-central1/subnetworks/default",
          },
        ],
        "scheduling": Object {
          "automaticRestart": true,
          "onHostMaintenance": "MIGRATE",
          "preemptible": false,
        },
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
        "serviceAccounts": Array [
          Object {
            "email": "j1-gc-integration-dev-sa-tf@j1-gc-integration-dev.iam.gserviceaccount.com",
            "scopes": Array [
              "https://www.googleapis.com/auth/compute.readonly",
              "https://www.googleapis.com/auth/devstorage.read_only",
              "https://www.googleapis.com/auth/userinfo.email",
            ],
          },
        ],
        "startRestricted": false,
        "status": "RUNNING",
        "tags": Array [
          Object {
            "testvmtag1": true,
          },
          Object {
            "testvmtag2": true,
          },
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_instance",
  "active": true,
  "blockProjectSSHKeys": undefined,
  "canIpForward": false,
  "cpuPlatform": "Intel Haswell",
  "createdOn": 1597245605921,
  "deletionProtection": false,
  "displayName": "testvm",
  "fingerprint": "4gmEF7tlfn8=",
  "id": "2248191918776890954",
  "isOSLoginEnabled": true,
  "isSerialPortEnabled": undefined,
  "isShieldedVM": undefined,
  "kind": "compute#instance",
  "labelFingerprint": "42WmSpB8rSM=",
  "machineType": "n1-standard-1",
  "name": "testvm",
  "privateIpAddress": Array [
    "10.128.0.2",
  ],
  "publicIpAddress": Array [],
  "startRestricted": false,
  "status": "RUNNING",
  "usesDefaultServiceAccount": false,
  "usesFullAccessDefaultServiceAccount": false,
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceUsesComputeDiskRelationship should convert to relationship 1`] = `
Object {
  "_class": "USES",
  "_fromEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm|uses|https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
  "_toEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
  "_type": "google_compute_instance_uses_disk",
  "autoDelete": true,
  "deviceName": "persisten-disk-0",
  "displayName": "USES",
  "interface": "SCSI",
  "mode": "READ_WRITE",
}
`;

exports[`#createComputeNetworkEntity should convert to entity 1`] = `
Object {
  "CIDR": null,
  "IPv4Range": undefined,
  "_class": Array [
    "Network",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/public-compute-app-vpc",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "autoCreateSubnetworks": false,
        "creationTimestamp": "2020-09-23T07:47:13.320-07:00",
        "id": "4319333979087364382",
        "kind": "compute#network",
        "name": "public-compute-app-vpc",
        "routingConfig": Object {
          "routingMode": "GLOBAL",
        },
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/public-compute-app-vpc",
        "subnetworks": Array [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/us-central1/subnetworks/public-compute-app-public-subnet-1",
        ],
      },
    },
  ],
  "_type": "google_compute_network",
  "autoCreateSubnetworks": false,
  "createdOn": 1600872433320,
  "description": undefined,
  "displayName": "public-compute-app-vpc",
  "gatewayIPv4": undefined,
  "id": "4319333979087364382",
  "internal": true,
  "name": "public-compute-app-vpc",
  "public": false,
  "routingMode": "GLOBAL",
  "subnetworks": Array [
    "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/us-central1/subnetworks/public-compute-app-public-subnet-1",
  ],
  "webLink": "https://console.cloud.google.com/networking/networks/details/public-compute-app-vpc?project=j1-gc-integration-dev",
}
`;

exports[`#createComputeProjectEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Project",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "commonInstanceMetadata": Object {
          "fingerprint": "3rFva159u8A=",
          "kind": "compute#metadata",
        },
        "creationTimestamp": "2021-01-04T09:00:19.752-08:00",
        "defaultNetworkTier": "PREMIUM",
        "defaultServiceAccount": "165882964161-compute@developer.gserviceaccount.com",
        "id": "8075573275056338764",
        "kind": "compute#project",
        "name": "j1-gc-integration-dev-300716",
        "quotas": Array [
          Object {
            "limit": 1000,
            "metric": "SNAPSHOTS",
            "usage": 0,
          },
          Object {
            "limit": 5,
            "metric": "NETWORKS",
            "usage": 3,
          },
          Object {
            "limit": 100,
            "metric": "FIREWALLS",
            "usage": 7,
          },
        ],
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716",
        "xpnProjectStatus": "UNSPECIFIED_XPN_PROJECT_STATUS",
      },
    },
  ],
  "_type": "google_compute_project",
  "createdOn": 1609779619752,
  "defaultNetworkTier": "PREMIUM",
  "defaultServiceAccount": "165882964161-compute@developer.gserviceaccount.com",
  "displayName": "j1-gc-integration-dev-300716",
  "id": "8075573275056338764",
  "isOSLoginEnabled": false,
  "kind": "compute#project",
  "name": "j1-gc-integration-dev-300716",
}
`;

exports[`#createComputeProjectEntity should set isOSLoginEnabled to true when enabled-oslogin metadata value is "TRUE" 1`] = `
Object {
  "_class": Array [
    "Project",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "commonInstanceMetadata": Object {
          "items": Array [
            Object {
              "key": "enable-oslogin",
              "value": "TRUE",
            },
          ],
          "kind": "compute#metadata",
        },
        "creationTimestamp": "2021-01-04T09:00:19.752-08:00",
        "defaultNetworkTier": "PREMIUM",
        "defaultServiceAccount": "165882964161-compute@developer.gserviceaccount.com",
        "id": "8075573275056338764",
        "kind": "compute#project",
        "name": "j1-gc-integration-dev-300716",
        "quotas": Array [
          Object {
            "limit": 1000,
            "metric": "SNAPSHOTS",
            "usage": 0,
          },
          Object {
            "limit": 5,
            "metric": "NETWORKS",
            "usage": 3,
          },
          Object {
            "limit": 100,
            "metric": "FIREWALLS",
            "usage": 7,
          },
        ],
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716",
        "xpnProjectStatus": "UNSPECIFIED_XPN_PROJECT_STATUS",
      },
    },
  ],
  "_type": "google_compute_project",
  "createdOn": 1609779619752,
  "defaultNetworkTier": "PREMIUM",
  "defaultServiceAccount": "165882964161-compute@developer.gserviceaccount.com",
  "displayName": "j1-gc-integration-dev-300716",
  "id": "8075573275056338764",
  "isOSLoginEnabled": true,
  "kind": "compute#project",
  "name": "j1-gc-integration-dev-300716",
}
`;

exports[`#createComputeSubnetEntity should convert to entity 1`] = `
Object {
  "CIDR": "10.164.0.0/20",
  "_class": Array [
    "Network",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/europe-west4/subnetworks/default",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2020-08-07T10:20:16.033-07:00",
        "fingerprint": "whfZBEBCda4=",
        "gatewayAddress": "10.164.0.1",
        "id": "1234567890",
        "ipCidrRange": "10.164.0.0/20",
        "kind": "compute#subnetwork",
        "name": "default",
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/default",
        "privateIpGoogleAccess": false,
        "privateIpv6GoogleAccess": "DISABLE_GOOGLE_ACCESS",
        "purpose": "PRIVATE",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/europe-west4",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/europe-west4/subnetworks/default",
      },
    },
  ],
  "_type": "google_compute_subnetwork",
  "createdOn": 1596820816033,
  "description": undefined,
  "displayName": "default",
  "flowLogsEnabled": false,
  "gatewayAddress": "10.164.0.1",
  "id": "1234567890",
  "internal": true,
  "name": "default",
  "privateIpGoogleAccess": false,
  "public": false,
  "purpose": "PRIVATE",
  "webLink": "https://console.cloud.google.com/networking/subnetworks/details/europe-west4/default?project=j1-gc-integration-dev",
}
`;

exports[`#createComputeSubnetEntity should have flowLogsEnabled set to true if it is enabled for subnet 1`] = `
Object {
  "CIDR": "10.164.0.0/20",
  "_class": Array [
    "Network",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/europe-west4/subnetworks/default",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2020-08-07T10:20:16.033-07:00",
        "fingerprint": "whfZBEBCda4=",
        "gatewayAddress": "10.164.0.1",
        "id": "1234567890",
        "ipCidrRange": "10.164.0.0/20",
        "kind": "compute#subnetwork",
        "logConfig": Object {
          "enable": true,
        },
        "name": "default",
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/default",
        "privateIpGoogleAccess": false,
        "privateIpv6GoogleAccess": "DISABLE_GOOGLE_ACCESS",
        "purpose": "PRIVATE",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/europe-west4",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/europe-west4/subnetworks/default",
      },
    },
  ],
  "_type": "google_compute_subnetwork",
  "createdOn": 1596820816033,
  "description": undefined,
  "displayName": "default",
  "flowLogsEnabled": true,
  "gatewayAddress": "10.164.0.1",
  "id": "1234567890",
  "internal": true,
  "name": "default",
  "privateIpGoogleAccess": false,
  "public": false,
  "purpose": "PRIVATE",
  "webLink": "https://console.cloud.google.com/networking/subnetworks/details/europe-west4/default?project=j1-gc-integration-dev",
}
`;

exports[`#createFirewallRuleMappedRelationship should convert to mapped relationship 1`] = `
Object {
  "_class": "ALLOWS",
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/firewalls/public-compute-app-fw-allow-https:tcp:0.0.0.0/0:443",
  "_mapping": Object {
    "relationshipDirection": "REVERSE",
    "skipTargetCreation": true,
    "sourceEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/firewalls/public-compute-app-fw-allow-https",
    "targetEntity": Object {
      "CIDR": "0.0.0.0/0",
      "CIDRv6": "::/0",
      "_class": Array [
        "Internet",
        "Network",
      ],
      "_key": "global:internet",
      "_type": "internet",
      "displayName": "Internet",
      "public": true,
    },
    "targetFilterKeys": Array [
      Array [
        "_key",
      ],
    ],
  },
  "_type": "google_cloud_firewall_rule",
  "displayName": "ALLOWS",
  "fromPort": 443,
  "ipProtocol": "tcp",
  "ipRange": "0.0.0.0/0",
  "portRange": "443",
  "protocol": "tcp",
  "toPort": 443,
}
`;

exports[`#createHealthCheckEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Service",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/healthChecks/health-check",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "checkIntervalSec": 10,
        "creationTimestamp": "2021-01-25T13:09:23.908-08:00",
        "description": "",
        "healthyThreshold": 2,
        "id": "1905105216322309484",
        "kind": "compute#healthCheck",
        "name": "health-check",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/healthChecks/health-check",
        "tcpHealthCheck": Object {
          "port": 80,
          "proxyHeader": "NONE",
        },
        "timeoutSec": 5,
        "type": "TCP",
        "unhealthyThreshold": 3,
      },
    },
  ],
  "_type": "google_compute_health_check",
  "category": Array [
    "network",
  ],
  "checkIntervalSec": 10,
  "createdOn": 1611608963908,
  "description": "",
  "displayName": "health-check",
  "healthyThreshold": 2,
  "id": "1905105216322309484",
  "name": "health-check",
  "timeoutSec": 5,
  "type": "TCP",
  "unhealthyThreshold": 3,
}
`;

exports[`#createInstanceGroupEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Group",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/zones/us-central1-a/instanceGroups/instance-group-1",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2021-01-25T13:05:35.348-08:00",
        "description": "This instance group is controlled by Instance Group Manager 'instance-group-1'. To modify instances in this group, use the Instance Group Manager API: https://cloud.google.com/compute/docs/reference/latest/instanceGroupManagers",
        "fingerprint": "Mhi8gtwR57U=",
        "id": "4682404015364017264",
        "kind": "compute#instanceGroup",
        "name": "instance-group-1",
        "namedPorts": Array [
          Object {
            "name": "https",
            "port": 5000,
          },
        ],
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/networks/default",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/zones/us-central1-a/instanceGroups/instance-group-1",
        "size": 1,
        "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/regions/us-central1/subnetworks/default",
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_instance_group",
  "createdOn": 1611608735348,
  "description": "This instance group is controlled by Instance Group Manager 'instance-group-1'. To modify instances in this group, use the Instance Group Manager API: https://cloud.google.com/compute/docs/reference/latest/instanceGroupManagers",
  "displayName": "instance-group-1",
  "id": "4682404015364017264",
  "name": "instance-group-1",
  "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/networks/default",
  "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/regions/us-central1/subnetworks/default",
  "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/zones/us-central1-a",
}
`;

exports[`#createLoadBalancerEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/urlMaps/example-http-load-balancer",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2021-01-25T13:09:32.355-08:00",
        "defaultService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/backendServices/example-backend-service",
        "fingerprint": "7VTPVZHiF8k=",
        "hostRules": Array [
          Object {
            "hosts": Array [
              "web.test.com",
            ],
            "pathMatcher": "path-matcher-1",
          },
        ],
        "id": "7884251075960802659",
        "kind": "compute#urlMap",
        "name": "example-http-load-balancer",
        "pathMatchers": Array [
          Object {
            "defaultService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/backendServices/example-backend-service",
            "name": "path-matcher-1",
            "pathRules": Array [
              Object {
                "paths": Array [
                  "/images/*",
                ],
                "service": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/backendBuckets/example-backend-bucket",
              },
            ],
          },
        ],
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/urlMaps/example-http-load-balancer",
      },
    },
  ],
  "_type": "google_compute_url_map",
  "category": Array [
    "network",
  ],
  "createdOn": 1611608972355,
  "defaultService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/backendServices/example-backend-service",
  "displayName": "example-http-load-balancer",
  "function": Array [
    "load-balancing",
  ],
  "id": "7884251075960802659",
  "name": "example-http-load-balancer",
  "public": true,
}
`;

exports[`#createSslPolicyEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Policy",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/sslPolicies/example-tls-1-2-policy",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2021-01-25T13:14:45.749-08:00",
        "customFeatures": Array [
          "TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA",
          "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256",
          "TLS_ECDHE_ECDSA_WITH_AES_256_CBC_SHA",
          "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
        ],
        "fingerprint": "5krWknNXjWo=",
        "id": "1226213084601944618",
        "kind": "compute#sslPolicy",
        "minTlsVersion": "TLS_1_2",
        "name": "example-tls-1-2-policy",
        "profile": "CUSTOM",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/sslPolicies/example-tls-1-2-policy",
      },
    },
  ],
  "_type": "google_compute_ssl_policy",
  "content": "",
  "createdOn": 1611609285749,
  "customFeatures": Array [
    "TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA",
    "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256",
    "TLS_ECDHE_ECDSA_WITH_AES_256_CBC_SHA",
    "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
  ],
  "displayName": "example-tls-1-2-policy",
  "id": "1226213084601944618",
  "minTlsVersion": "TLS_1_2",
  "name": "example-tls-1-2-policy",
  "profile": "CUSTOM",
  "summary": "SSL policies give you the ability to control the features of SSL that your Google Cloud SSL proxy load balancer or external HTTP(S) load balancer negotiates with clients.",
  "title": "SSL Policy",
}
`;

exports[`#createTargetHttpProxyEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/targetHttpProxies/example-http-loadbalancer-target-proxy",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2021-02-04T11:44:02.365-08:00",
        "fingerprint": "XrJcBMxyGME=",
        "id": "3284730591055048813",
        "kind": "compute#targetHttpProxy",
        "name": "example-http-loadbalancer-target-proxy",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/targetHttpProxies/example-http-loadbalancer-target-proxy",
        "urlMap": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/urlMaps/example-http-loadbalancer",
      },
    },
  ],
  "_type": "google_compute_target_http_proxy",
  "category": Array [
    "network",
  ],
  "createdOn": 1612467842365,
  "displayName": "example-http-loadbalancer-target-proxy",
  "function": Array [
    "load-balancing",
  ],
  "id": "3284730591055048813",
  "name": "example-http-loadbalancer-target-proxy",
  "public": true,
}
`;

exports[`#createTargetHttpsProxyEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/targetHttpsProxies/example-http-load-balancer-target-proxy",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2021-01-25T13:12:07.139-08:00",
        "id": "4900822412538579656",
        "kind": "compute#targetHttpsProxy",
        "name": "example-http-load-balancer-target-proxy",
        "quicOverride": "NONE",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/targetHttpsProxies/example-http-load-balancer-target-proxy",
        "sslCertificates": Array [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/sslCertificates/example-certificate",
        ],
        "sslPolicy": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/sslPolicies/example-tls-1-2-policy",
        "urlMap": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/urlMaps/example-http-load-balancer",
      },
    },
  ],
  "_type": "google_compute_target_https_proxy",
  "category": Array [
    "network",
  ],
  "createdOn": 1611609127139,
  "displayName": "example-http-load-balancer-target-proxy",
  "function": Array [
    "load-balancing",
  ],
  "id": "4900822412538579656",
  "name": "example-http-load-balancer-target-proxy",
  "public": true,
  "sslPolicy": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/sslPolicies/example-tls-1-2-policy",
}
`;

exports[`#createTargetSslProxyEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/targetSslProxies/example-ssl-2-loadbalancer-target-proxy",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2021-02-04T12:07:33.886-08:00",
        "id": "764465862189116138",
        "kind": "compute#targetSslProxy",
        "name": "example-ssl-2-loadbalancer-target-proxy",
        "proxyHeader": "NONE",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/targetSslProxies/example-ssl-2-loadbalancer-target-proxy",
        "service": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/backendServices/example-ssl-2-loadbalancer",
        "sslCertificates": Array [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-300716/global/sslCertificates/example-certificate",
        ],
      },
    },
  ],
  "_type": "google_compute_target_ssl_proxy",
  "category": Array [
    "network",
  ],
  "createdOn": 1612469253886,
  "displayName": "example-ssl-2-loadbalancer-target-proxy",
  "function": Array [
    "load-balancing",
  ],
  "id": "764465862189116138",
  "name": "example-ssl-2-loadbalancer-target-proxy",
  "public": true,
  "sslPolicy": undefined,
}
`;
